@@ -442,6 +442,19 @@ sub _addConfigurationContainers
     }
 }
 
+sub depends
+{
+    my ($self) = @_;
+    my @depends = @{ $self->SUPER::depends() };
+
+    my $mailfilter =  $self->global->modInstance('mailfilter');
+    if ($mailfilter and $mailfilter->configured()) {
+        push @depends, 'mailfilter';
+    }
+
+    return \@depends;
+}
+
 # Method: _getIfacesForAddress
 #
 #  This method returns all interfaces which ip address belongs
@@ -1089,6 +1102,10 @@ sub _postfixIsRunning
 sub externalFilter
 {
     my ($self) = @_;
+    my $mailfilter = EBox::Global->modInstance('mailfilter');
+    if ($mailfilter and $mailfilter->isEnabled()) {
+        return 'zentyal-mailfilter';
+    }
 
     my $filterModel = $self->model('ExternalFilter');
     return $filterModel->row()->valueByName('externalFilter');
@@ -1100,6 +1117,36 @@ sub customFilterInUse
     return $self->externalFilter() eq 'custom';
 }
 
+sub _zentyalMailfilterAttr
+{
+    my ($self, $attr) = @_;
+    my $mailfilter = EBox::Global->modInstance('mailfilter');
+    $mailfilter or
+        throw EBox::Exceptions::Internal('Mailfilter not installed');
+
+    my ($name, $attrs) = $mailfilter->mailFilter();
+    exists $attrs->{$attr}
+      or throw EBox::Exceptions::Internal("Attribute $attr does not exist");
+    return $attrs->{$attr};
+}
+
+# returns wether we must use the filter attr instead of the stored in the
+# module's cponfgiuration
+sub _useFilterAttr
+{
+    my ($self) = @_;
+
+    if (not $self->service('filter')) {
+        return 0;
+    }
+
+    if ($self->externalFilter() eq 'custom') {
+        return 0;
+    }
+
+    return 1;
+}
+
 # Method: ipfilter
 #
 #  This method returns the ip of the external filter
@@ -1107,6 +1154,10 @@ sub customFilterInUse
 sub ipfilter
 {
     my ($self) = @_;
+
+    if ($self->_useFilterAttr) {
+        return $self->_zentyalMailfilterAttr('address');
+    }
 
     my $filterModel = $self->model('ExternalFilter');
     return $filterModel->ipfilter();
@@ -1120,6 +1171,10 @@ sub portfilter
 {
     my ($self) = @_;
 
+    if ($self->_useFilterAttr) {
+        return $self->_zentyalMailfilterAttr('port');
+    }
+
     my $filterModel = $self->model('ExternalFilter');
     return $filterModel->portfilter();
 }
@@ -1131,6 +1186,10 @@ sub portfilter
 sub fwport
 {
     my ($self) = @_;
+
+    if ($self->_useFilterAttr) {
+        return $self->_zentyalMailfilterAttr('forwardPort');
+    }
 
     my $filterModel = $self->model('ExternalFilter');
     return $filterModel->fwport();
@@ -1470,6 +1529,9 @@ sub mailServicesWidget
     $section->add($imaps);
     $section->add($greylist);
     $section->add($fetchmailWidget);
+
+    my $filterSection = $self->_filterDashboardSection();
+    $widget->add($filterSection);
 }
 
 #
@@ -1488,6 +1550,49 @@ sub widgets
             'default' => 1
         }
     };
+}
+
+sub _filterDashboardSection
+{
+    my ($self) = @_;
+
+    my $section = new EBox::Dashboard::Section('mailfilter', 'Mail filter');
+
+    my $service     = $self->service('filter');
+    my $statusValue =  $service ? __('enabled') : __('disabled');
+
+    $section->add( new EBox::Dashboard::Value( __('Status'), $statusValue));
+
+    $section->add(
+            new EBox::Dashboard::Value(__(q{Mail server's filter}),
+                $statusValue)
+            );
+
+    $service or return $section;
+
+    my $filter = $self->externalFilter();
+
+    if ($filter eq 'custom') {
+        $section->add(new EBox::Dashboard::Value(__('Filter type') =>
+            __('Custom')));
+        my $address = $self->ipfilter() . ':' . $self->portfilter();
+        $section->add(new EBox::Dashboard::Value(__('Address') => $address));
+    }else {
+        $section->add(
+                new EBox::Dashboard::Value(
+                    __('Filter type') => $self->_zentyalMailfilterAttr('prettyName')
+                    )
+                );
+
+# FIXME: this crashes, and maybe it's not needed
+#        my $global = EBox::Global->getInstance(1);
+#        my ($filterInstance) =
+#          grep {$_->mailFilterName eq $filter}
+#          @{  $global->modInstancesOfType('EBox::Mail::FilterProvider')  };
+#        $filterInstance->mailFilterDashboard($section);
+    }
+
+    return $section;
 }
 
 sub menu
