@@ -1,3 +1,5 @@
+HEAD
+	+ Restore integration with zentyal-mailfilter
 4.1
 	+ Remove deprecated OpenChange notifications plugin in dovecot.conf
 	+ Remove external AD integration
